# ros-donkey

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
donkeycar/msgs/: package.xml
donkeycar/parts/actuator/: CMakeLists.txt  package.xml  setup.py
donkeycar/parts/actuator/launch/: actuator.launch
donkeycar/parts/actuator/src/donkey_actuator/: actuator.py
donkeycar/parts/camera/: CMakeLists.txt  package.xml  setup.py
donkeycar/parts/camera/launch/: ros_donkey_camera.launch
donkeycar/parts/datastore/src/donkey_datastore/: datastore.py
donkeycar/parts/donkey_msgs/: CMakeLists.txt
donkeycar/parts/joy/: CMakeLists.txt  package.xml  setup.py
donkeycar/parts/joy/launch/: ros_donkey.launch
donkeycar/parts/joy/src/: turtle_teleop_joy.cpp
donkeycar/parts/joy/src/donkey_joy/: joy.py
donkeycar/parts/keras/: CMakeLists.txt  README.md  package.xml  setup.py
donkeycar/parts/keras/launch/: drive.launch  ros_donkey_keras.launch  train.launch
donkeycar/parts/keras/src/donkey_keras/: data.py  model.py  pilot.py  utils.py
donkeycar/parts/keras/src/ros_donkey_keras/: main.py
donkeycar/parts/recorder/: CMakeLists.txt  package.xml  setup.py
donkeycar/parts/recorder/launch/: record.launch
donkeycar/parts/recorder/src/donkey_bag_recorder/: recorder.py
donkeycar/ros_donkey/: CMakeLists.txt  config.yaml  package.xml
donkeycar/ros_donkey/launch/: vehicle.launch
launch/: ros_donkey.launch  turtle_joy.launch
src/: turtle_teleop_joy.cpp
