<?xml version="1.0"?>
<package format="2">
  <name>ros_donkey</name>
  <version>0.0.0</version>
  <description>The ros_donkey package</description>
  <maintainer email="liamondrop@gmail.com">Liam Bowers</maintainer>

  <license>MIT</license>

  <url type="repository">https://github.com/liamondrop/ros-donkey</url>
  <url type="bugtracker">https://github.com/liamondrop/ros-donkey/issues</url>

  <author>Liam Bowers</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>joy</depend>
  <depend>joy_teleop</depend>
  <depend>raspicam_node</depend>
  <depend>rosbag</depend>
</package>
