<?xml version="1.0"?>
<package format="2">
  <name>ros_donkey_camera</name>
  <version>0.0.0</version>
  <description>ros_donkey_camera description</description>
  <maintainer email="liamondrop@gmail.com">Liam Bowers</maintainer>

  <license>MIT</license>

  <url type="repository">https://github.com/ros_donkey_camera</url>
  <url type="bugtracker">https://github.com/ros_donkey_camera/issues</url>

  <author>Liam Bowers</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
</package>
