<?xml version="1.0"?>
<package format="2">
  <name>donkey_joy</name>
  <version>0.0.0</version>
  <description>The donkey_joy package</description>
  <maintainer email="liamondrop@gmail.com">Liam Bowers</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>joy</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
</package>
