<?xml version="1.0"?>
<package format="2">
  <name>donkey_keras</name>
  <version>0.0.0</version>
  <description>The donkey_keras package</description>
  <maintainer email="liamondrop@gmail.com">Liam Bowers</maintainer>

  <license>MIT</license>

  <url type="repository">https://github.com/liamondrop/ros-donkey</url>
  <url type="bugtracker">https://github.com/liamondrop/ros-donkey/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>python-tensorflow-pip</depend>
</package>
