<?xml version="1.0"?>
<package format="2">
  <name>donkey_bag_recorder</name>
  <version>0.0.0</version>
  <description>Joystick activated ROS Bag recorder designed to produce synchronized image and drive messages for easy labeled training data.</description>
  <maintainer email="liamondrop@gmail.com">Liam Bowers</maintainer>

  <license>MIT</license>

  <url type="repository">https://github.com/liamondrop/ros-donkey</url>
  <url type="bugtracker">https://github.com/liamondrop/ros-donkey/issues</url>

  <author>Liam Bowers</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
</package>
